--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ Temporary Items
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+
+GoogleService-Info.plist
+
 ## User settings
 xcuserdata/
 
